Add scheduler helper class for convenience

--- a/read_weather_data/test/CMakeLists.txt
+++ b/read_weather_data/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(${PROJECT_NAME} test_ringbuffer.cpp)
+add_executable(${PROJECT_NAME} test_main.cpp test_ringbuffer.cpp test_scheduler.cpp)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
